AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

lib_LTLIBRARIES = liblargenet-0.5.la
liblargenet_0_5_la_CPPFLAGS = -O3
liblargenet_0_5_la_LDFLAGS = -version-info 0:0:0

liblargenet_0_5_la_SOURCES = \
		largenet/measures/correlations.cpp \
		largenet/io/NodeEdgelistOut.cpp \
		largenet/io/EdgelistOut.cpp \
		largenet/io/EdgelistIn.cpp \
		largenet/io/NetIn.cpp \
		largenet/io/NetOut.cpp \
		largenet/io/NodeEdgelistIn.cpp \
		largenet/network/TripleMultiNetwork.cpp \
		largenet/network/Network.cpp \
		largenet/network/TripleNetwork.cpp \
		largenet/network/repo/repo_base.cpp \ \
		largenet/network/BasicNetwork.cpp \
		largenet/myrng1.2/myrngWELL.cpp \
		largenet/boost/boost_largenet_multigraph.cpp \
		largenet/motifs/QuadLineMotif.cpp \
		largenet/motifs/TripleMotif.cpp \
		largenet/motifs/detail/motif_construction.cpp \
		largenet/motifs/LinkMotif.cpp \
		largenet/motifs/NodeMotif.cpp \
		largenet/motifs/QuadStarMotif.cpp \
		largenet/generators.cpp \
		largenet/network/repo/iterators.h \
		largenet/network/repo/CategorizedRepository.h \
		largenet/network/repo/types.h \
		largenet/network/repo/repo_base.h \
		largenet/tnt/tnt.h \
		largenet/tnt/tnt_array1d.h \
		largenet/tnt/tnt_subscript.h \
		largenet/tnt/tnt_fortran_array2d_utils.h \
		largenet/tnt/tnt_fortran_array3d.h \
		largenet/tnt/tnt_array2d.h \
		largenet/tnt/tnt_i_refvec.h \
		largenet/tnt/tnt_fortran_array3d_utils.h \
		largenet/tnt/tnt_stopwatch.h \
		largenet/tnt/tnt_array2d_utils.h \
		largenet/tnt/tnt_sparse_matrix_csr.h \
		largenet/tnt/jama_eig.h \
		largenet/tnt/tnt_array3d_utils.h \
		largenet/tnt/jama_cholesky.h \
		largenet/tnt/tnt_fortran_array2d.h \
		largenet/tnt/tnt_version.h \
		largenet/tnt/tnt_fortran_array1d_utils.h \
		largenet/tnt/tnt_vec.h \
		largenet/tnt/jama_lu.h \
		largenet/tnt/tnt_array1d_utils.h \
		largenet/tnt/jama_svd.h \
		largenet/tnt/tnt_math_utils.h \
		largenet/tnt/jama_qr.h \
		largenet/tnt/tnt_array3d.h \
		largenet/tnt/tnt_fortran_array1d.h \
		largenet/tnt/tnt_cmat.h 

nobase_include_HEADERS = \
		largenet/myrng1.2/myrngWELL.h \
		largenet/measures/path.h \
		largenet/measures/correlations.h \
		largenet/measures/measures.h \
		largenet/measures/component.h \
		largenet/io/NetworkIO.h \
		largenet/io/NodeEdgelistIn.h \
		largenet/io/EdgelistOut.h \
		largenet/io/NodeEdgelistOut.h \
		largenet/io/NetOut.h \
		largenet/io/iodefs.h \
		largenet/io/NetIn.h \
		largenet/io/EdgelistIn.h \
		largenet/network/BasicNetwork.h \
		largenet/network/TripleMultiNetwork.h \
		largenet/network/TLink.h \
		largenet/network/types.h \
		largenet/network/Triple.h \
		largenet/network/Network.h \
		largenet/network/traits.h \
		largenet/network/MultiNetwork.h \
		largenet/network/TypedNetwork.h \
		largenet/network/TripleNetwork.h \
		largenet/network/Node.h \
		largenet/network/state_calculators.h \
		largenet/network/Link.h \
		largenet/boost/boost_largenet_multigraph.h \
		largenet/motifs/QuadLineMotif.h \
		largenet/motifs/TripleMotif.h \
		largenet/motifs/LinkMotif.h \
		largenet/motifs/NodeMotif.h \
		largenet/motifs/detail/motif_construction.h \
		largenet/motifs/QuadStarMotif.h \
		largenet/motifs/MotifSet.h \
		largenet/motifs.h \
		largenet/generators.h \
		largenet.h		
